# cowchat

./: Cargo.toml  README.md  initdb.sh
src/: errors.rs  main.rs
src/api/: handlers.rs  mod.rs  types.rs  utils.rs  websockets.rs
src/db/: mod.rs
