[package]
categories = ["web-programming::http-server", "web-programming::websocket"]
description = "chat with cows near you"
edition = "2021"
keywords = ["example", "actix-web", "websockets", "sqlite", "CRUD", "cows"]
license = "MIT"
name = "cowchat"
publish = false
version = "0.1.0"

[dependencies]
actix-web = { version = "4.0", features = ["openssl"] }
actix-web-validator = "3.0"
anyhow = "1.0"
env_logger = "0.9"
lazy_static = "1.4"
log = "0.4"
openssl = "0.10"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.14", features = ["derive"] }